end of lecture 0

--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,50 @@
     <title>
         My Web Page!
     </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    Hello World!
+    <h1>Welcome to my web page!</h1>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Type</th>
+            <th>level</th>
+        </tr>
+        <tr>
+            <td>Charmander</td>
+            <td>Fire</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>Squirtle</td>
+            <td>Water</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>Bulbasaur</td>
+            <td>Grass</td>
+            <td>10</td>
+        </tr>
+    </table>
+
+    <div id="top">
+        This is the <span class="name">top</span> of my web page
+    </div>
+    <div id="middle">
+        This is the <span class="name">middle</span> of my web page
+    </div>
+    <div id="bottom">
+        This is the <span class="name">bottom</span> of my web page
+    </div>
+
+
+
+    <form>
+        <input type="text" placeholder="Full Name" name="name">
+        <button>Submit!!!</button>
+    </form>
 </body>
 
 </html>
