--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Welcome to my web page!</h1>
+    <h1>Welcome to POKEMON LAND!</h1>
     <table>
         <tr>
             <th>Name</th>
